--- a/_config.yml
+++ b/_config.yml
@@ -13,27 +13,27 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Business Jekyll Theme
-email: your-email@example.com
+title: The Intersectional Business Academy
+email: anna@learneq.ca
 description: > # this means to ignore newlines until "baseurl:"
-  Yet another Jekyll theme. It is designed for business purpose and ported by 
-  Melvin Ch'ng.
+  The Intersectional Business Academy is a space for entrepreneurs to learn
+  about the intersection of business and social justice, and how to apply these
+  principles in their work.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Company Information
-company_name: Johns, Smith & Associates
-address_line: Via Ludovisi 39-45, Rome, 54267, Italy
+company_name: The Intersectional Business Academy
+address_line: Toronto, Ontario
 telephone_number: 1.800.245.356
 fax_number: 1.800.245.357
-company_email: hello@LawOffice.org
-google_map: https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3618.727010735933!2d91.837871!3d24.907291700000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1404919738144
+company_email: anna@learneq.ca
+google_map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d721.0469277889509!2d-79.39868673028954!3d43.70664796766089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b333cbc996b59%3A0xedee9cf62c8978ce!2s1%20Eglinton%20Ave%20E%20Level%20C-400%2C%20Toronto%2C%20ON%20M4P%201A1!5e0!3m2!1sen!2sca!4v1755312211732!5m2!1sen!2sca
 
 # Social Link
 facebook_link: http://www.facebook.com
 twitter_link: http://www.twitter.com
 linkedin_link: http://www.linkedin.com
-googleplus_link: http://plus.google.com
 
 # Build settings
 markdown: kramdown
