--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
   principles in their work.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+logo: "assets\img\logos\FB Avatar.png"
 
 # Company Information
 company_name: The Intersectional Business Academy
