--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ company_name: The Intersectional Business Academy
 address_line: Toronto, Ontario
 telephone_number: 1.800.245.356
 fax_number: 1.800.245.357
-company_email: anna@learneq.ca
+company_email: info@learneq.ca
 google_map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d721.0469277889509!2d-79.39868673028954!3d43.70664796766089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b333cbc996b59%3A0xedee9cf62c8978ce!2s1%20Eglinton%20Ave%20E%20Level%20C-400%2C%20Toronto%2C%20ON%20M4P%201A1!5e0!3m2!1sen!2sca!4v1755312211732!5m2!1sen!2sca
 
 # Social Link
