update footer copyright year, add courses and services pages

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ logo: "assets/img/logos/FB Avatar.png"
 twitter_username: 
 github_username: 
 
+# Copyright time
+time: 2024
+
 # Company Information
 company_name: The Intersectional Business Academy
 address_line: Toronto, Ontario
