update copyright year to January 1, 2024

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter_username:
 github_username: 
 
 # Copyright time
-time: 2024
+time: 2024-01-01
 
 # Company Information
 company_name: The Intersectional Business Academy
